tests/errmsgs/t19682.nim
discard """
errormsg: "selector must be of an ordinal type, float or string"
"""
type A = object

case A()
else:
  discard